# quant-trading

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
research/options-mispricing-nn/: README.md  config.yaml  model.py  model_pricing.py  requirements.txt
research/qphase-cross-validation/: README.md  run_comparison.py  run_index_tracking.py  run_neural_qaoa_init.py  run_option_pricing.py  run_trade_selection.py
scripts/: run_demo.py  run_live_agents.py
src/quant_trading/: __init__.py
src/quant_trading/agents/: __init__.py  ensemble_allocator.py  orchestrator.py  qubo_allocator.py  sentiment.py
src/quant_trading/backtest/: __init__.py  engine.py
src/quant_trading/data/: filing_text.py  ipo_scanner.py  loaders.py  news_scraper.py  sec_edgar.py
src/quant_trading/strategies/: __init__.py  base.py  filing_drift.py  insider_trading.py  mean_reversion.py  ml_signal.py  momentum.py  pairs_trading.py
src/quant_trading/utils/: metrics.py  validation.py
tests/: conftest.py  test_backtest.py  test_filing_text.py  test_ipo_scanner.py  test_metrics.py  test_orchestrator.py  test_qubo_allocator.py  test_sec_edgar.py  test_strategies.py
