[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trading"
version = "0.1.0"
description = "Research-grade multi-strategy quant trading toolkit with an adaptive allocator agent"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "yfinance>=0.2.40",
    "pyarrow>=14.0",
    "aiohttp>=3.9",
    "vaderSentiment>=3.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "matplotlib>=3.7", "statsmodels>=0.14"]
llm = ["anthropic>=0.40"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
